# splitnc

./: README.md  pyproject.toml  splitnc.py
.github/workflows/: cd.yaml  cd.yml  ci.yaml
src/splitnc/: __init__.py  esm1p6.py  splitnc.py
test/: common.py  test_splitnc.py
test/data/: aiihca.pa-234501_mon.cdl  aiihca.pa-234502_mon.cdl  aiihca.pc-010101.cdl  aiihca.pe-234501_dai.cdl  aiihca.pi-010101_3hr.cdl  aiihca.pj-010101_6hr.cdl  iceh-1-mean_0272.cdl  iceh-1daily-mean_2345-01.cdl  iceh-1hourly-mean_0272.cdl  iceh-1monthly-mean_2345-01.cdl  iceh-1monthly-mean_2345-02.cdl  iceh-1yearly-mean_0001.cdl  iceh-1yearly-mean_0272.cdl  iceh-2daily-mean_0272.cdl  iceh-2hourly-mean_0272.cdl  iceh-2monthly-mean_0272.cdl  simple.cdl  simple_cellmethod_rename.cdl  simple_circular.cdl  simple_coords_extra_space.cdl
